# face-id-project

./: CMakeLists.txt  Face_Dedection.ipynb  Face_Recognition_ArcFace_ONNX.ipynb  README.MD  extract_video.py  try_embed.cpp  try_embed.py
